# tfc-ws-apply-replace

./: .gitignore  README.md  payload.json  rotate.py  setup.cfg  setup.py
tfcar/: find_resources.py  workspace_name.py
