[metadata]
name = tfc-apply-replace
version = 1.0.2
description = Tool to perform dynamic terraform applies w/replacement on TFC using resource name keywords.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djschnei21/tfc-ws-apply-replace
project_urls =
    Bug Tracker = https://github.com/djschnei21/tfc-ws-apply-replace/issues
classifiers =
    # See: https://pypi.python.org/pypi?:action=list_classifiers
    Environment :: Console
    # List of python versions and their support status:
    # https://en.wikipedia.org/wiki/CPython#Version_history
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    tfc-apply-replace
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    tfc-apply-replace = tfcar.cli:main

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt